# SingleThreadScheduler

./: CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt
include/SingleThreadScheduler/: Scheduler.h  Task.h  ThreadWithScheduler.h
include/ThreadBondScheduler/: Scheduler.h  Task.h
src/: SchedulerImpl1.cpp  SingleThreadScheduclerImpl1.cpp  ThreadWithScheduler.cpp
test/: testSchedulerImpl1.cpp  testSingleThreadScheduclerImpl1.cpp  testTask.cpp  testThreadWithScheduler.cpp
